--- a/FixMyRideApp/app/src/main/res/layout/activity_report_generation.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_report_generation.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_launcher_background"
+    android:background="@color/background_color"
     android:padding="16dp">
 
     <LinearLayout
@@ -13,6 +13,7 @@
         android:orientation="vertical"
         android:gravity="center_horizontal"
         android:paddingBottom="16dp"
+        android:paddingTop="16dp"
         android:paddingHorizontal="16dp"
         android:background="@color/cardview_shadow_start_color">
 
@@ -142,9 +143,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Create Report"
-            android:background="@drawable/button_background"
+            android:background="@color/button_color"
             android:textColor="#FFFFFF"
-            android:padding="10dp"
-            android:layout_marginTop="160dp"/>
+            android:padding="15dp"
+            android:layout_marginTop="25dp"/>
     </LinearLayout>
 </LinearLayout>
