--- a/FixMyRideApp/app/src/main/res/drawable/spinner_background.xml
+++ b/FixMyRideApp/app/src/main/res/drawable/spinner_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#0514A0"
-        android:endColor="#1A2BC8"
+        android:startColor="#404A4B"
+        android:endColor="#191C1E"
         android:angle="270" />
 </shape>
