--- a/FixMyRideApp/app/src/main/res/layout/activity_images.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_images.xml
@@ -15,23 +15,28 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/images"
-        android:textColor="#FFFFFF"
+        android:text="Detect damage"
+        android:textColor="@color/material_dynamic_neutral10"
+        android:fontFamily="monospace"
         android:textStyle="bold"
-        android:textSize="40sp"
+        android:textSize="35sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <view class="androidx.recyclerview.widget.RecyclerView"
+    <view
         android:id="@+id/recyclerView"
+        class="androidx.recyclerview.widget.RecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/titleText"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/titleText"
+        app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/item_image" />
+
 
     <ImageButton
         android:id="@+id/logoutButton"
@@ -39,40 +44,44 @@
         android:layout_height="70dp"
         android:background="@android:color/transparent"
         android:contentDescription="Logs out the user"
-        android:src="@drawable/baseline_logout_24"
+        android:src="@drawable/baseline_arrow_back_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.885"
+        app:layout_constraintHorizontal_bias="0.953"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.045" />
+        app:layout_constraintVertical_bias="0.024" />
 
     <TextView
         android:id="@+id/instructionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Upload your images and\nlet us do our part"
+        android:text="Add some images of the\ndamaged vehicle"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
+        android:textColor="@color/material_dynamic_neutral10"
+        android:fontFamily="monospace"
+        android:textSize="22sp"
+        android:textFontWeight="900"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.831" />
 
     <ImageButton
         android:id="@+id/galleryButton"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:background="@android:color/transparent"
         android:contentDescription="Opens Gallery"
-        android:src="@drawable/baseline_add_24"
-        app:layout_constraintBottom_toTopOf="@id/instructionText"
+        android:src="@drawable/baseline_add_photo_alternate_24"
+        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
+        app:layout_constraintHorizontal_bias="0.372"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/recyclerView"
+        app:layout_constraintVertical_bias="0.944" />
 
     <ImageButton
         android:id="@+id/cameraButton"
@@ -81,9 +90,10 @@
         android:layout_marginBottom="32dp"
         android:background="@android:color/transparent"
         android:contentDescription="Starts Camera"
-        android:src="@drawable/baseline_camera_alt_24"
+        android:src="@drawable/baseline_add_a_photo_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.648"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
@@ -94,9 +104,10 @@
         android:background="@android:color/transparent"
         android:contentDescription="Clear Images from local storage"
         android:src="@drawable/baseline_clear_24"
+        android:backgroundTint="@color/material_dynamic_neutral10"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.150"
+        app:layout_constraintHorizontal_bias="0.046"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
@@ -109,7 +120,7 @@
         android:src="@drawable/baseline_check_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.850"
+        app:layout_constraintHorizontal_bias="0.953"
         app:layout_constraintStart_toStartOf="parent" />
 
 
