--- a/FixMyRideApp/app/src/main/res/layout/activity_login.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_login.xml
@@ -74,8 +74,10 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:backgroundTint="@color/material_dynamic_neutral10"
+            android:fontFamily="monospace"
+            android:textSize="18dp"
             android:text="Login"
-            android:background="@drawable/button_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/passwordEditText" />
@@ -89,7 +91,9 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:text="To Sign Up"
-            android:background="@drawable/button_background"
+            android:backgroundTint="@color/material_dynamic_neutral10"
+            android:fontFamily="monospace"
+            android:textSize="18dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/loginButton" />
@@ -102,7 +106,9 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:text="Forgot Password"
-            android:background="@drawable/button_background"
+            android:backgroundTint="@color/material_dynamic_neutral10"
+            android:fontFamily="monospace"
+            android:textSize="18dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/registerButton" />
