--- a/FixMyRideApp/app/src/main/res/layout/activity_report.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_report.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ic_launcher_background">
@@ -9,8 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:layout_marginTop="15dp"
-        android:background ="@color/cardview_shadow_start_color">
+        android:layout_marginTop="15dp">
 
         <TextView
             android:id="@+id/titleText"
@@ -161,6 +161,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/estimatedCostLabel" />
 
+        <Button
+            android:id="@+id/homeButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="155dp"
+            android:backgroundTint="@color/material_dynamic_neutral10"
+            android:padding="10dp"
+            android:text="Home"
+            android:textColor="#FFFFFF"
+            app:layout_constraintTop_toBottomOf="@+id/imagesRecyclerView"
+            tools:layout_editor_absoluteX="16dp" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/partsLinksRecyclerView"
             android:layout_width="match_parent"
@@ -173,7 +185,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/partsLinksRecyclerView" />
+            app:layout_constraintTop_toBottomOf="@id/partsLinksRecyclerView"
+            tools:layout_editor_absoluteX="16dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
