--- a/FixMyRideApp/app/src/main/res/layout/activity_report_generation.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_report_generation.xml
@@ -13,8 +13,7 @@
         android:orientation="vertical"
         android:gravity="center_horizontal"
         android:paddingBottom="16dp"
-        android:paddingHorizontal="16dp"
-        android:background="@color/cardview_shadow_start_color">
+        android:paddingHorizontal="16dp">
 
         <!-- Title -->
         <TextView
