--- a/FixMyRideApp/app/src/main/res/layout/activity_report.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_report.xml
@@ -19,7 +19,7 @@
             android:text="Vehicle Report"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:textColor="@color/material_dynamic_neutral10"
+            android:textColor="@color/button_color"
             android:fontFamily="monospace"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -32,14 +32,14 @@
             android:text="Brand:"
             android:textStyle="bold"
             android:textSize="20dp"
-            android:textColor="@color/material_dynamic_neutral10"
+            android:textColor="@color/button_color"
             android:fontFamily="monospace"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/titleText" />
 
         <TextView
             android:id="@+id/brandValue"
-            android:textColor="@color/material_dynamic_neutral10"
+            android:textColor="@color/button_color"
             android:fontFamily="monospace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -57,7 +57,7 @@
             android:text="Model:"
             android:textSize="20dp"
             android:textStyle="bold"
-            android:textColor="@color/material_dynamic_neutral10"
+            android:textColor="@color/button_color"
             android:fontFamily="monospace"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/brandLabel" />
@@ -67,7 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:textColor="@color/material_dynamic_neutral10"
+            android:textColor="@color/button_color"
             android:fontFamily="monospace"
             android:textSize="20dp"
             android:textStyle="bold"
@@ -82,7 +82,7 @@
             android:text="Year:"
             android:textStyle="bold"
             android:textSize="20dp"
-            android:textColor="@color/material_dynamic_neutral10"
+            android:textColor="@color/button_color"
             android:fontFamily="monospace"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/modelLabel" />
@@ -92,7 +92,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:textColor="@color/material_dynamic_neutral10"
+            android:textColor="@color/button_color"
             android:fontFamily="monospace"
             android:textSize="20dp"
             android:textStyle="bold"
@@ -107,7 +107,7 @@
             android:text="Damaged Parts:"
             android:textStyle="bold"
             android:textSize="20dp"
-            android:textColor="@color/material_dynamic_neutral10"
+            android:textColor="@color/button_color"
             android:fontFamily="monospace"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/yearLabel" />
@@ -116,7 +116,7 @@
             android:id="@+id/damagedPartsRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/material_dynamic_neutral10"
+            android:textColor="@color/button_color"
             android:fontFamily="monospace"
             android:padding="8dp"
             android:textSize="20dp"
@@ -131,7 +131,7 @@
             android:text="Estimated Cost:"
             android:textStyle="bold"
             android:textSize="20dp"
-            android:textColor="@color/material_dynamic_neutral10"
+            android:textColor="@color/button_color"
             android:fontFamily="monospace"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/damagedPartsRecyclerView" />
@@ -141,7 +141,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:textColor="@color/material_dynamic_neutral10"
+            android:textColor="@color/button_color"
             android:fontFamily="monospace"
             android:textSize="20dp"
             android:textStyle="bold"
@@ -155,7 +155,7 @@
             android:layout_marginTop="24dp"
             android:text="Some links to help you in your search:"
             android:textStyle="bold"
-            android:textColor="@color/material_dynamic_neutral10"
+            android:textColor="@color/button_color"
             android:fontFamily="monospace"
             android:textSize="16dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -165,12 +165,28 @@
             android:id="@+id/homeButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="155dp"
-            android:backgroundTint="@color/material_dynamic_neutral10"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="24dp"
+            android:backgroundTint="@color/button_color"
             android:padding="10dp"
             android:text="Home"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/text_color"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imagesRecyclerView"
+            tools:layout_editor_absoluteX="16dp" />
+
+        <Button
+            android:id="@+id/deleteReportButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="48dp"
+            android:backgroundTint="@color/button_color"
+            android:padding="10dp"
+            android:text="Delete Report"
+            android:textColor="@color/text_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/homeButton"
             tools:layout_editor_absoluteX="16dp" />
 
         <androidx.recyclerview.widget.RecyclerView
