--- a/FixMyRideApp/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/FixMyRideApp/app/src/main/res/drawable/ic_launcher_background.xml
@@ -5,7 +5,7 @@
     android:viewportWidth="60"
     android:viewportHeight="100">
     <path
-        android:fillColor="@color/material_dynamic_neutral_variant60"
+        android:fillColor="@color/background_color"
         android:pathData="M0,0h108v108h-108z" />
     <path
         android:fillColor="#00000000"
