--- a/FixMyRideApp/app/src/main/res/layout/activity_images.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_images.xml
@@ -16,7 +16,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="Detect damage"
-        android:textColor="@color/material_dynamic_neutral10"
+        android:textColor="@color/text_color"
         android:fontFamily="monospace"
         android:textStyle="bold"
         android:textSize="35sp"
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:text="Add some images of the\ndamaged vehicle"
         android:textAlignment="center"
-        android:textColor="@color/material_dynamic_neutral10"
+        android:textColor="@color/text_color"
         android:fontFamily="monospace"
         android:textSize="22sp"
         android:textFontWeight="900"
@@ -104,7 +104,7 @@
         android:background="@android:color/transparent"
         android:contentDescription="Clear Images from local storage"
         android:src="@drawable/baseline_clear_24"
-        android:backgroundTint="@color/material_dynamic_neutral10"
+        android:backgroundTint="@color/button_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.046"
