--- a/FixMyRideApp/app/src/main/res/layout/activity_login.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_login.xml
@@ -41,10 +41,11 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:fontFamily="monospace"
             android:hint="Email"
             android:inputType="textEmailAddress"
             android:textColorHint="@color/white"
-            android:textColor="@color/white"
+            android:textColor="@color/text_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -57,10 +58,11 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:fontFamily="monospace"
             android:hint="Password"
             android:inputType="textPassword"
             android:textColorHint="@color/white"
-            android:textColor="@color/white"
+            android:textColor="@color/text_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/emailEditText" />
@@ -73,10 +75,11 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:backgroundTint="@color/material_dynamic_neutral10"
+            android:backgroundTint="@color/button_color"
             android:fontFamily="monospace"
             android:textSize="18dp"
             android:text="Login"
+            android:textColor="@color/text_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/passwordEditText" />
@@ -90,9 +93,10 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:text="To Sign Up"
-            android:backgroundTint="@color/material_dynamic_neutral10"
+            android:backgroundTint="@color/button_color"
             android:fontFamily="monospace"
             android:textSize="18dp"
+            android:textColor="@color/text_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/loginButton" />
@@ -105,9 +109,10 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:text="Forgot Password"
-            android:backgroundTint="@color/material_dynamic_neutral10"
+            android:backgroundTint="@color/button_color"
             android:fontFamily="monospace"
             android:textSize="18dp"
+            android:textColor="@color/text_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/registerButton" />
