--- a/FixMyRideApp/app/src/main/res/layout/activity_report_history.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_report_history.xml
@@ -8,6 +8,15 @@
     android:background="@color/background_color"
     tools:context=".ReportHistoryActivity">
 
+    <LinearLayout
+        android:id="@+id/reportHistoryTitleContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:background="@color/button_color"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/reportsRecyclerView">
+
     <TextView
         android:id="@+id/reportHistoryTitle"
         android:layout_width="wrap_content"
@@ -17,28 +26,31 @@
         android:text="Report History"
         android:textColor="@color/text_color"
         android:textSize="24sp"
+        android:textStyle="bold"
+        android:fontFamily="monospace"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/reportsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="5dp"
         android:clipToPadding="false"
         android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/reportHistoryTitle" />
+        app:layout_constraintTop_toBottomOf="@id/reportHistoryTitleContainer" />
 
     <TextView
         android:id="@+id/emptyStateText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="No reports yet"
-        android:visibility="gone"
         android:textColor="@color/text_color"
         android:textSize="18sp"
+        android:fontFamily="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
